--- a/SF6DataFetcher/SF6DataFetcher.csproj
+++ b/SF6DataFetcher/SF6DataFetcher.csproj
@@ -7,4 +7,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.12.2" />
+    <PackageReference Include="Microsoft.Playwright" Version="1.54.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SF6CharacterDatabaseModels\SF6CharacterDatabaseModels.csproj" />
+  </ItemGroup>
+
 </Project>
