--- a/SF6DataFetcher/SF6DataFetcher.csproj
+++ b/SF6DataFetcher/SF6DataFetcher.csproj
@@ -9,6 +9,9 @@
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.12.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.7" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.7" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.7" />
     <PackageReference Include="Microsoft.Playwright" Version="1.54.0" />
   </ItemGroup>
 
