Fix Command Parser

--- a/SF6DataFetcher/appsettings.json
+++ b/SF6DataFetcher/appsettings.json
@@ -3,6 +3,7 @@
     "CharacterUrl": "https://www.streetfighter.com/6/ja-jp/character/ryu/frame",
     "DebugHtmlFile": "debug_framearea.html",
     "OutputJsonFile": "attackdata.json",
+    "CommandMappingCsvPath": "../SF6CharacterDatabaseModels/Shared/CommandMappings.csv",
 
     "GotoTimeout": 60000,
     "WaitForSelectorTimeout": 10000,
