Add LocalTest and Create Frame Class

--- a/SF6DataFetcher/appsettings.json
+++ b/SF6DataFetcher/appsettings.json
@@ -1,5 +1,6 @@
 {
   "FrameData": {
+    "UseLocalHtml": true,
     "CharacterUrl": "https://www.streetfighter.com/6/ja-jp/character/ryu/frame",
     "DebugHtmlFile": "debug_framearea.html",
     "OutputJsonFile": "attackdata.json",
