--- a/SF6DataFetcher/character_mappings.json
+++ b/SF6DataFetcher/character_mappings.json
@@ -1,12 +1,28 @@
 {
   "RYU": "ryu",
-  "KEN": "ken",
   "LUKE": "luke",
+  "JAMIE": "jamie",
   "CHUN-LI": "chunli",
   "GUILE": "guile",
+  "KIMBERLY": "kimberly",
   "JURI": "juri",
-  "CAMMY": "cammy",
+  "KEN": "ken",
   "BLANKA": "blanka",
+  "DHALSIM": "dhalsim",
+  "E_HONDA": "ehonda",
+  "DEE_JAY": "deejay",
+  "MANON": "manon",
+  "MARISA": "marisa",
+  "JP": "jp",
   "ZANGIEF": "zangief",
-  "DEE_JAY": "deejay"
+  "LILY": "lily",
+  "CAMMY": "cammy",
+  "RASHID": "rashid",
+  "AKI": "aki",
+  "ED": "ed",
+  "GOUKI": "gouki_akuma",
+  "VEGA": "vega_mbison",
+  "TERRY": "terry",
+  "MAI": "mai",
+  "ELENA": "elena"
 }
