--- a/SF6DataFetcher/appsettings.json
+++ b/SF6DataFetcher/appsettings.json
@@ -1,6 +1,6 @@
 {
   "FrameData": {
-    "UseLocalHtml": false,
+    "UseLocalHtml": true,
     "CharacterMappingsFile": "character_mappings.json",
     "CharacterUrlTemplate": "https://www.streetfighter.com/6/ja-jp/character/{urlName}/frame",
     "OutputJsonDirectory": "Output/Json",
